--- a/wiki/TelluriumUserGuide.wiki
+++ b/wiki/TelluriumUserGuide.wiki
@@ -239,8 +239,54 @@ Tellurium UI templates are used for two purposes:
   # When there are many identical UI elements, you can use one template to represent them all
   # When here are a variable/dynamic size of UI elements at runtime, you know the patterns, but not the size.
 
-More specifically, Table and List are two Tellurium objects that can define UI templates. Table defines two dimensional UI templates, and List is for one dimensional. The Template has
-special UIDs such as "2", "all", or "row: 1, column: 2". 
+More specifically, Table and List are two Tellurium objects that can define UI templates. Table defines two dimensional UI templates, and List is for one dimensional. The Template has special UIDs such as "2", "all", or "row: 1, column: 2". 
+
+Let us look at use case (1), we have the following HTML source
+
+{{{
+      <ul class="a">
+        <li>
+            <A HREF="site?tcid=a"
+               class="b">AA
+            </A>
+        </li>
+        <li>
+            <A HREF="site?tcid=b"
+               class="b">BB
+            </A>
+        </li>
+        <li>
+            <A HREF="site?;tcid=c"
+               class="b">CC
+            </A>
+        </li>
+        <li>
+            <A HREF="site?tcid=d"
+               class="b">DD
+            </A>
+        </li>
+        <li>
+            <A HREF="site?tcid=e"
+               class="b">EE
+            </A>
+        </li>
+        <li>
+            <A HREF="site?tcid=f"
+               class="b">FF
+            </A>
+        </li>
+    </ul>
+}}}
+
+You have six links there. Without templates, you have to put six UrlLink objects in the UI module. Look at how simple by using the template
+
+{{{
+ui.List(uid: "list", clocator: [tag: "ul", class: "a"], separator:"li")
+{
+    UrlLink(uid: "all", clocator: [class: "b"])
+}
+}}}
+
 
 For use case (2), a common application is the data grid. Look at the "issueResult" data grid on our Tellurium Issues page:
 
@@ -320,6 +366,132 @@ A more general example is as follows:
 }}}
 
 Except for the "click" event, all of the "focus", "mouseOver", "mouseOut", and "blur" events will be automatically fired by Tellurium during testing. Do not worry about the event order for the respond attribute, Tellurium will automatically re-order the events and then process them appropriately for you.
+
+===  Logical Container ===
+
+The Container object in Tellurium is used to hold child objects that are in the same subtree in the DOM object. However, there are always exceptions. For example, logical Container (Or virtual Container, but I think Logical Container is better) can violate this rule. 
+
+What is a logic Container? It is a Container with empty locator, for instance,
+
+{{{
+Container(uid: "logical"){
+   ......
+}
+}}}
+
+
+But empty != nothing, there are some scenarios that the logical container can play an important role. The reason is the Container includes a uid for you to refer and it can logically group UI element together.
+
+Look at the following example,
+{{{
+
+    <div class="block_content">
+        <ul>
+            <li>
+                <h5>
+                    <a href="" title="">xxx</a>
+                </h5>
+                <p class="product_desc">
+                    <a href=".." title="More">...</a>
+                </p>
+                <a href="..." title=".." class="product_image">
+                    <img src="..." alt="..." height="129" width="129"/>
+                </a>
+                <p>
+                    <a class="button" href="..." title="View">View</a>
+                    <a title="Add to cart">Add to cart</a>
+                </p>
+            </li>
+            <li>
+                similar UI
+            </li>
+            <li>
+                similar UI
+            </li>
+        </ul>
+    </div>       
+
+}}}
+
+As you see, the UI elements under the tag li are different and how to write the UI template for them? The good news is that the logical Container comes to play. For example,
+the UI module could be written as
+
+{{{
+ui.Container(uid: "content", clocator: [tag: "div", class: "block_content"]){
+     List(uid: "list", clocator: [tag: "ul"], separator:"li") {
+         Container("all"){
+             UrlLink(uid: "title", clocator: [title: "View"])
+                      ......
+                      other elements inside the li tag
+         }
+    }
+} 
+}}}
+
+Another usage of the logical Container is to convert the test case recorded by Selenium IDE to Tellurium test cases. Let us take the search UI on Tellurium download page as an example. 
+
+First, I recorded the following Selenium test case using Selenium IDE,
+
+{{{
+import com.thoughtworks.selenium.SeleneseTestCase;
+
+public class SeleniumTestCase extends SeleneseTestCase {
+	public void setUp() throws Exception {
+		setUp("http://code.google.com/", "*chrome");
+	}
+	public void testNew() throws Exception {
+		selenium.open("/p/aost/downloads/list");
+		selenium.select("can", "label=regexp:\\sAll Downloads");
+		selenium.type("q", "TrUMP");
+		selenium.click("//input[@value='Search']");
+		selenium.waitForPageToLoad("30000");
+	}
+}
+}}}
+
+Don't be confused by the locator "can" and "q", they are just UI element ids and can be easily expressed in XPath. The "label=regexp:\\sAll Downloads" part just tells you that Selenium uses regular express to match the String and the "\s" stands for a space. As a result, we can write the UI module based on the above code.
+
+{{{
+public class TelluriumDownloadPage extends DslContext {
+
+  public void defineUi() {
+    ui.Container(uid: "downloads") {
+      Selector(uid: "downloadType", locator: "//*[@id='can']")
+      InputBox(uid: "input", locator: "//*[@id='q']")
+      SubmitButton(uid: "search", locator: "//input[@value='Search']")
+    }
+  }
+
+  public void searchDownload(String downloadType, String searchKeyWords) {
+    selectByLabel "downloads.downloadType", downloadType
+    keyType "downloads.input", searchKeyWords
+    click "downloads.search"
+    waitForPageToLoad 30000
+  }
+}
+}}}
+
+And we can create the Tellurium test case accordingly,
+
+{{{
+public class TelluriumDownloadPageTestCase extends TelluriumJavaTestCase {
+
+    protected static TelluriumDownloadPage ngsp;
+
+    @BeforeClass
+    public static void initUi() {
+        ngsp = new TelluriumDownloadPage();
+        ngsp.defineUi();
+    }
+
+    @Test
+    public void testSearchDownload(){
+        connectUrl("http://code.google.com/p/aost/downloads/list");
+        ngsp.searchDownload(" All Downloads", "TrUMP");
+    }
+}
+}}}
+
 
 === jQuery Selector ===
 
@@ -533,49 +705,85 @@ customDirectCall(String method, Object[] args)
 
 === Tellurium Data Driven Testing ===
 
-In Tellurium Data Driven Testing, more DSLs are defined. The first one is the way to define input data format using FieldSet, which represents the format of a line in the input file. 
+[http://code.google.com/p/aost/w/edit/DataDrivenTesting Data Driven Testing] is a different way to write tests, i.e, separate test data from the test scripts and the test flow is not controlled by the test scripts, but by the input file instead. In the input file, users can specify which tests to run, what are input parameters, and what are expected results.
+
+The tellurium data driven test consists of three main parts, i.e., Data Provider, TelluriumDataDrivenModule, and TelluriumDataDrivenTest. The data provider is responsible for reading data from input stream and converting data to Java variables. Tellurium provides the following data provider methods:
+
+  # loadData file_name, load input data from a file 
+  # useData String_name, load input data from a String in the test script
+  # bind(field_name), bind a variable to a field in a field set
+  # closeData, close the input data stream and report the test results
+  # cacheVariable(name, variable), put variable into cache
+  # getCachedVariable(name, variable), get variable from cache
+
+cacheVariable and getCachedVariable are used to pass intermediate variables among tests. 
+
+TelluriumDataDrivenModule is used to define modules, where users can define Ui Modules, FieldSets, and tests as illustrated by the following example,
 
 {{{
-//define file data format
-fs.FieldSet(name: "GoogleBookList", description: "Google Book List") {
-    Test(value: "checkBookList")
-    Field(name: "category", description: "book category")
-    Field(name: "size", type: "int", description: "google book list size ")
+ui.Table(uid: "labels_table", clocator: [:], group: "true"){
+   TextBox(uid: "row: 1, column: 1", clocator: [tag: "div", text: "Example project labels:"])
+   Table(uid: "row: 2, column: 1", clocator: [header: "/div[@id=\"popular\"]"]){
+        UrlLink(uid: "all", locator: "/a")
+   }
+}
+
+fs.FieldSet(name: "GCHStatus", description: "Google Code Hosting input") {
+    Test(value: "getGCHStatus")
+    Field(name: "label")
+    Field(name: "rowNum", type: "int")
+    Field(name: "columNum", type: "int")
+}  
+
+defineTest("getGCHStatus"){
+    def expectedLabel = bind("GCHStatus.label")
+    def expectedRowNum = bind("GCHStatus.rowNum")
+    def expectedColumnNum = bind("GCHStatus.columNum")
+
+    openUrl("http://code.google.com/hosting/")
+    def label = getText("labels_table[1][1]")
+    def rownum = getTableMaxRowNum("labels_table[2][1]")
+    def columnum = getTableMaxColumnNum("labels_table[2][1]")
+
+    compareResult(expectedLabel, label)
+    compareResult(expectedRowNum, rownum)
+    compareResult(expectedColumnNum, columnum)
+    pause 1000
 }
 }}}
 
-The above FieldSet includes multiple Fields and Test is special Field indicate the test name. To handle custom input data type, Tellurium provide the "typeHandler" DSL for the users to define a custom data type handler.
+TelluriumDataDrivenTest is the class users should extend to run the actual data driven testing. 
 
 {{{
-typeHandler "phoneNumber", "org.tellurium.test.PhoneNumberTypeHandler"
+class GoogleBookListCodeHostTest extends TelluriumDataDrivenTest{
+
+    public void testDataDriven() {
+
+        includeModule  example.google.GoogleBookListModule.class
+        includeModule  example.google.GoogleCodeHostingModule.class
+
+        //load file
+        loadData "src/test/example/test/ddt/GoogleBookListCodeHostInput.txt"
+        
+        //read each line and run the test script until the end of the file
+        stepToEnd()
+
+        //close file
+        closeData()
+    }
+}
 }}}
 
-In addition to that, Tellurium defined the following DSLs to control the testing flow and compare the results:
-  
-  * includeModule: load a user defined Data Driven Module. For example,
+The sample input data are as follows,
 
-  {{{
-    includeModule  example.test.ddt.GoogleBookListModule.class
-  }}}
+{{{
+##TEST should be always be the first column
 
-  * loadData: load input data file. For example,
-
-  {{{
-    loadData "src/test/example/test/ddt/GoogleBookListCodeHostInput.txt"
-  }}}
-
-  * compareResult: compare the expected value with the actual result, for example:
-
-  {{{
-    compareResult "Java", category
-  }}}
-
-  * stepToEnd(): read each line from the input data stream and run the corresponding test until it reaches the end of the stream.
-
-  * closeData(): close the input data stream and output the test results.
-
-More details for Data Driven Testing DSLs can be found on [http://code.google.com/p/aost/wiki/DataDrivenTesting the Tellurium Data Driven Testing page]
-
+##Data for test "getGCHStatus"
+##TEST | LABEL | Row Number | Column Number
+getGCHStatus |Example project labels:| 3 | 6
+getGCHStatus |Example project| 3 | 6 
+}}}
 
 === The Dump Method ===
 
