--- a/wiki/TelluriumUserGuide.wiki
+++ b/wiki/TelluriumUserGuide.wiki
@@ -2,6 +2,8 @@
 #labels Phase-Design,Phase-Support,Featured
 <wiki:toc max_depth="5" />
 
+= Tellurium User Guide =
+
 == Introduction ==
 
 === Motivations ===
