--- a/wiki/TelluriumUserGuide.wiki
+++ b/wiki/TelluriumUserGuide.wiki
@@ -511,7 +511,7 @@ locator. i.e. XPath
 
 jQuery selector only works for composite locator, i.e. clocator. You cannot have base locator, i.e., XPath, in your UI module.
 
-jQuery Selector provides the following additional Selenium methods, which are utilized in DslContext? to form a set of new DSL methods.
+jQuery Selector provides the following additional Selenium methods, which are utilized in DslContext to form a set of new DSL methods.
 
    * {{{String getAllText(String locator)}}}: Get all text from the set of elements corresponding to the jQuery Selector.
 
@@ -556,7 +556,8 @@ To make the cache option configurable in tellurium UI module, Tellurium introduc
 One example UI module is defined as follows,
 
 {{{
-  ui.Table(uid: "issueResultWithCache", cacheable: "true", noCacheForChildren: "true", clocator: [id: "resultstable", class: "results"], group: "true") {
+  ui.Table(uid: "issueResultWithCache", cacheable: "true", noCacheForChildren: "true",
+           clocator: [id: "resultstable", class: "results"], group: "true") {
  
        ......
 
@@ -623,7 +624,8 @@ Then, you can include it into your new UI module as follows,
 TelluriumConfig.groovy provides project level test settings, you can use setCustomConfig to custmoize individual testing settings.
 
 {{{
-public void setCustomConfig(boolean runInternally, int port, String browser, boolean useMultiWindows, String profileLocation)
+public void setCustomConfig(boolean runInternally, int port, String browser,
+                            boolean useMultiWindows, String profileLocation)
 }}}
 
 For example, you can specify your custom settings as follows,
@@ -639,22 +641,21 @@ static{
 To support user custom selenium extensions, Tellurium Core added the following configurations to TelluriumConfig.groovy 
 
 {{{
-    embeddedserver {
+  embeddedserver {
 
-        ......
+    ......
 
-        //user-extension.js file, for example "target/test-classes/extension/user-extensions.js"
-        userExtension = ""
-    }
-    connector{
+    //user-extension.js file, for example "target/user-extensions.js"
+    userExtension = ""
+  }
+  connector{
 
-        ......
+    ......
 
-        //user's class to hold custom selenium methods associated with user-extensions.js
-        //should in full class name, for instance, "com.mycom.CustomSelenium"
-        customClass = ""
-    }
-
+    //user's class to hold custom selenium methods associated with user-extensions.js
+    //should in full class name, for instance, "com.mycom.CustomSelenium"
+    customClass = ""
+  }
 }}}
 
 Where the _userExtension_ points to user's user-extensions.js file, for example, you have the following user-extensions.js 
@@ -827,10 +828,27 @@ The above code will print out the runtime XPath locators
 Dump locator information for issueSearch
 -------------------------------------------------------
 issueSearch: //descendant-or-self::form[@action="list" and @method="get"]
-issueSearch.issueType: //descendant-or-self::form[descendant::select[@name="can" and @id="can"] and descendant::span[contains(text(),"for")] and descendant::input[@type="text" and @name="q"] and descendant::input[@value="Search" and @type="submit"] and @action="list" and @method="get"]/descendant-or-self::select[@name="can" and @id="can"]
-issueSearch.searchLabel: //descendant-or-self::form[descendant::select[@name="can" and @id="can"] and descendant::span[contains(text(),"for")] and descendant::input[@type="text" and @name="q"] and descendant::input[@value="Search" and @type="submit"] and @action="list" and @method="get"]/descendant-or-self::span[contains(text(),"for")]
-issueSearch.searchBox: //descendant-or-self::form[descendant::select[@name="can" and @id="can"] and descendant::span[contains(text(),"for")] and descendant::input[@type="text" and @name="q"] and descendant::input[@value="Search" and @type="submit"] and @action="list" and @method="get"]/descendant-or-self::input[@type="text" and @name="q"]
-issueSearch.searchButton: //descendant-or-self::form[descendant::select[@name="can" and @id="can"] and descendant::span[contains(text(),"for")] and descendant::input[@type="text" and @name="q"] and descendant::input[@value="Search" and @type="submit"] and @action="list" and @method="get"]/descendant-or-self::input[@value="Search" and @type="submit"]
+issueSearch.issueType: //descendant-or-self::form[descendant::select[@name="can" and 
+     @id="can"] and descendant::span[contains(text(),"for")] and 
+     descendant::input[@type="text" and @name="q"] and 
+     descendant::input[@value="Search" and @type="submit"] and 
+     @action="list" and @method="get"]/descendant-or-self::select
+                         [@name="can" and @id="can"]
+issueSearch.searchLabel: //descendant-or-self::form[descendant::select[@name="can" 
+     and @id="can"] and descendant::span[contains(text(),"for")] and
+     descendant::input[@type="text" and @name="q"] and descendant::input[
+     @value="Search" and @type="submit"] and @action="list" and @method="get"]
+     /descendant-or-self::span[contains(text(),"for")]
+issueSearch.searchBox: //descendant-or-self::form[descendant::select[@name="can" 
+     and @id="can"] and descendant::span[contains(text(),"for")] and 
+     descendant::input[@type="text" and @name="q"] and descendant::input[
+     @value="Search" and @type="submit"] and @action="list" and @method="get"]
+     /descendant-or-self::input[@type="text" and @name="q"]
+issueSearch.searchButton: //descendant-or-self::form[descendant::select[@name="can" 
+     and @id="can"] and descendant::span[contains(text(),"for")] and 
+     descendant::input[@type="text" and @name="q"] and descendant::input[
+     @value="Search" and @type="submit"] and @action="list" and @method="get"]
+     /descendant-or-self::input[@value="Search" and @type="submit"]
 -------------------------------------------------------
 }}}
 
@@ -848,7 +866,8 @@ tellurium{
         port = "4444"
         //whether to use multiple windows
         useMultiWindows = false
-        //whether to run the embedded selenium server. If false, you need to manually set up a selenium server
+        //whether to run the embedded selenium server. 
+        //If false, you need to manually set up a selenium server
         runInternally = false
         //profile location
         profile = ""
@@ -922,26 +941,6 @@ In the package org.tellurium.test, Tellurium provides three different ways to wr
   * TelluriumTestNGTestCase is for TestNG. Similarly, you can use the following annotations: @BeforeSuite, @AfterSuite, @BeforeTest, @AfterTest, @BeforeGroups, @AfterGroups, @BeforeClass, @AfterClass, @BeforeMethod, @AfterMethod, @DataProvider, @Parameters, and @Test
   * TelluriumGroovyTestCase is for Groovy test cases.
   * Data Driven Testing. Tellurium provides the class _TelluriumDataDrivenModule_ for users to define data driven testing modules and the class _TelluriumDataDrivenTest_ to drive the actual tests.
-
-Tellurium defined a set of DSLs to support Tellurium tests. The most often used ones include
-
-  * openUrl(String url): establish a new connection to Selenium server for the given url. The DSL format is:
-
-  {{{
-    openUrl url
-  }}}
-
-  Example: 
-
-  {{{
-    openUrl "http://code.google.com/p/aost/"
-  }}}
-
-  * connectUrl(String url): use existing connect for the given url. The DSL format is:
-
-  {{{
-    connectUrl "http://code.google.com/p/aost/" 
-  }}}
 
 Apart from the above, Tellurium also provides users the capability to write Tellurium tests and Tellurium data driven tests in pure DSL scripts. The _DslScriptExecutor_ is used to run the .dsl files.
 
@@ -1156,6 +1155,34 @@ In addition to the above DSLs, Tellurium provides Selenium-compatible data acces
 
   * {{{String[] getAllWindowTitles()}}}: Returns the titles of all windows that the browser knows about.
 
+=== Test Support DSL ===
+
+Tellurium defined a set of DSLs to support Tellurium tests. The most often used ones include
+
+  * openUrl(String url): establish a new connection to Selenium server for the given url. The DSL format is:
+
+  {{{
+    openUrl url
+  }}}
+
+  Example: 
+
+  {{{
+    openUrl "http://code.google.com/p/aost/"
+  }}}
+
+  * connectUrl(String url): use existing connect for the given url. The DSL format is:
+
+  {{{
+    connectUrl url
+  }}}
+
+  Example:
+
+  {{{
+    connectUrl "http://code.google.com/p/aost/" 
+  }}}
+
 == Tellurium UI Objects==
 
 Tellurium provides a set of predefined Ui objects, which users can use directly. Here we describe them one by one in details.
@@ -1182,10 +1209,10 @@ and the base Ui object also provides the following methods:
 Obviously, all UI Objects will inherit the above attributes and methods. But be aware that you usually do not call these methods directly and you should use DSL syntax instead. For example, use
 
 {{{
-  click "google_start_page.googlesearch"
+  click "GoogleStartPage.GoogleSearch"
 }}}
 
-In this way, Tellurium will first map the UiID "google_start_page.googlesearch" to the actual UI object and then call the _click_ method on it. If that Ui object does not have the _click_ method defined, you will get an error.
+In this way, Tellurium will first map the UiID ""GoogleStartPage.GoogleSearch" to the actual UI object and then call the _click_ method on it. If that Ui object does not have the _click_ method defined, you will get an error.
 
 === UI Object Default Attributes ===
 
@@ -1424,7 +1451,9 @@ Table is one of the most complicated Ui Object and also the most often used one.
 Another distinguished feature of Table is that you can define Ui template for its elements. For example, the following example defines different table headers and the template for the first column, the element on the second row and the second column, and the template for all the other elements in other rows and columns.
 
 {{{
-ui.Table(uid: "downloadResult", clocator: [id: "resultstable", class: "results"], group: "true"){
+ui.Table(uid: "downloadResult", clocator: [id: "resultstable", class: "results"], 
+         group: "true")
+{
     //define table header
     //for the border column
     TextBox(uid: "header: 1", clocator: [:])
@@ -1583,8 +1612,11 @@ SelectMenu is designed for the selecting column menu on the Tellurium Issues pag
 The SelectMenu on the Tellurium issues page is expressed as follows,
 
 {{{
-ui.SelectMenu(uid: "selectColumnMenu", clocator:[class: "popup",id: "pop__dot"], title: "Show columns:",
-    items: ["ID":"ID", "Type":"Type", "Status":"Status", "Priority":"Priority", "Milestone":"Milestone", "Owner":"Owner", "Summary":"Summary", "Stars":"Stars", "Opened":"Opened", "Closed":"Closed", "Modified":"Modified", "EditColumn":"Edit Column Spec..." ])
+ui.SelectMenu(uid: "selectColumnMenu", clocator:[class: "popup",id: "pop__dot"], 
+    title: "Show columns:", items: ["ID":"ID", "Type":"Type", "Status":"Status",
+    "Priority":"Priority", "Milestone":"Milestone", "Owner":"Owner", 
+    "Summary":"Summary", "Stars":"Stars", "Opened":"Opened", "Closed":"Closed",
+    "Modified":"Modified", "EditColumn":"Edit Column Spec..." ])
 }}}
 
 Like SimpleMenu, SelectMenu also has the following methods:
@@ -1780,7 +1812,7 @@ Up to Tellurium 0.6.0, Tellurium still leveraged Selenium core as the test drivi
   * Bulk data retrieval. For example, the following method will get back all data in a table with just one method call, which improves the speed dramatically:
 
 {{{
-      String getAllTableCellText(String uid) 
+        String getAllTableCellText(String uid) 
 }}}
 
   * New APIs for partial matching of attributes, CSS query, and more.
@@ -1800,19 +1832,26 @@ Tellurium provides [http://code.google.com/p/aost/wiki/TelluriumMavenArchetypes 
 Run the following maven command to create a new JUnit project
 
 {{{
-mvn archetype:create -DgroupId=your_group_id -DartifactId=your_artifact_id -DarchetypeArtifactId=tellurium-junit-archetype -DarchetypeGroupId=tellurium -DarchetypeVersion=0.6.0
+mvn archetype:create -DgroupId=your_group_id -DartifactId=your_artifact_id \
+             -DarchetypeArtifactId=tellurium-junit-archetype \
+             -DarchetypeGroupId=tellurium -DarchetypeVersion=0.6.0
 }}}
 
 Without adding the Tellurium Maven repository, you can specify it in the command line as
 {{{
-mvn archetype:create -DgroupId=your_group_id -DartifactId=your_artifact_id -DarchetypeArtifactId=tellurium-junit-archetype -DarchetypeGroupId=tellurium -DarchetypeVersion=0.6.0 \
--DarchetypeRepository=http://kungfuters.org/nexus/content/repositories/releases
+mvn archetype:create -DgroupId=your_group_id -DartifactId=your_artifact_id \
+                     -DarchetypeArtifactId=tellurium-junit-archetype \
+                     -DarchetypeGroupId=tellurium -DarchetypeVersion=0.6.0 \
+     -DarchetypeRepository=http://kungfuters.org/nexus/content/repositories/releases
 }}}
 
 For TestNG project, you should use a different archetype
 
 {{{
-mvn archetype:create -DgroupId=your_group_id -DartifactId=your_artifact_id -DarchetypeArtifactId=tellurium-testng-archetype -DarchetypeGroupId=tellurium -DarchetypeVersion=0.6.0
+mvn archetype:create -DgroupId=your_group_id -DartifactId=your_artifact_id \
+                     -DarchetypeArtifactId=tellurium-testng-archetype \
+                     -DarchetypeGroupId=tellurium -DarchetypeVersion=0.6.0 \
+     -DarchetypeRepository=http://kungfuters.org/nexus/content/repositories/releases
 }}}
 
 === Tellurium Reference Projects ===
@@ -1845,11 +1884,21 @@ There are three ways: use [http://code.google.com/p/aost/wiki/ReferenceProjectGu
 
 The easiest way to create a Tellurium project is to use Tellurium Maven archetypes. Tellurium provides two Maven archetypes: tellurium-junit-archetype and tellurium-testng-archetype (for Tellurium JUnit test projects and Tellurium TestNG test projects respectively.) As a result, you can create a Tellurium project using one Maven command. For a Tellurium JUnit project, use:
 
-mvn archetype:create -DgroupId=your_group_id -DartifactId=your_artifact_id -DarchetypeArtifactId=tellurium-junit-archetype -DarchetypeGroupId=tellurium -DarchetypeVersion=0.7.0-SNAPSHOT -DarchetypeRepository=http://kungfuters.org/nexus/content/repositories/snapshots
+{{{
+mvn archetype:create -DgroupId=your_group_id -DartifactId=your_artifact_id \
+     -DarchetypeArtifactId=tellurium-junit-archetype -DarchetypeGroupId=tellurium \
+     -DarchetypeVersion=0.7.0-SNAPSHOT \
+     -DarchetypeRepository=http://kungfuters.org/nexus/content/repositories/snapshots
+}}}
 
 and for a Tellurium TestNG project, use:
 
-mvn archetype:create -DgroupId=your_group_id -DartifactId=your_artifact_id -DarchetypeArtifactId=tellurium-testng-archetype -DarchetypeGroupId=tellurium -DarchetypeVersion=0.7.0-SNAPSHOT -DarchetypeRepository=http://kungfuters.org/nexus/content/repositories/snapshots
+{{{
+mvn archetype:create -DgroupId=your_group_id -DartifactId=your_artifact_id \
+     -DarchetypeArtifactId=tellurium-testng-archetype -DarchetypeGroupId=tellurium \
+     -DarchetypeVersion=0.7.0-SNAPSHOT \
+     -DarchetypeRepository=http://kungfuters.org/nexus/content/repositories/snapshots
+}}}
 
 For an Ant user, you should download [http://aost.googlecode.com/files/tellurium-core-0.6.0.jar Tellurium core 0.6.0 jar file] from [http://code.google.com/p/aost/downloads/list Tellurium project download page], [http://aost.googlecode.com/files/tellurium-0.6.0-dependencies.zip the Tellurium dependency file], and [http://code.google.com/p/aost/wiki/TelluriumSampleConfigurationFile the Tellurium configuration file]. Unpack the Tellurium dependency file to your project /lib directory together with the Tellurium core 0.6.0 jar file. Name the Tellurium configuration file as TelluriumConfig.groovy and put it at your project root directory. 
 
