Edited wiki page through web user interface.

--- a/wiki/TelluriumUserGuide.wiki
+++ b/wiki/TelluriumUserGuide.wiki
@@ -2012,7 +2012,8 @@ class SelectMenu extends UiObject{
 
     String header = null
 
-    //map to hold the alias name for the menu item in the format of "alias name" : "menu item"
+    //map to hold the alias name for the menu item in the format of 
+    //"alias name" : "menu item"
     Map<String, String> aliasMap
 
     def click(Closure c){
@@ -2090,7 +2091,9 @@ public class TelluriumIssueModule extends DslContext {
       SubmitButton(uid: "searchButton", clocator: [value: "Search"])
     }
 
-    ui.Table(uid: "issueResult", clocator: [id: "resultstable", class: "results"], group: "true") {
+    ui.Table(uid: "issueResult", clocator: [id: "resultstable", class: "results"], 
+             group: "true") 
+{
       TextBox(uid: "header: 1", clocator: [:])
       UrlLink(uid: "header: 2", clocator: [text: "*ID"])
       UrlLink(uid: "header: 3", clocator: [text: "*Type"])
@@ -2198,6 +2201,7 @@ public class TelluriumIssueModule extends DslContext {
 
 === Groovy Test Case ===
 
+{{{
 public class TelluriumIssueGroovyTestCase extends GroovyTestCase{
 
   private TelluriumIssueModule tisp;
@@ -2233,9 +2237,11 @@ public class TelluriumIssueGroovyTestCase extends GroovyTestCase{
     tisp.dump("issueResult");
   }
 }
+}}}
 
 === Java Test Case ===
 
+{{{
 public class TelluriumIssueTestCase extends TelluriumJavaTestCase {
     private static TelluriumIssueModule tisp;
 
@@ -2330,6 +2336,7 @@ public class TelluriumIssueTestCase extends TelluriumJavaTestCase {
         }
     }
 }
+}}}
 
 === Data Driven Testing ===
 
@@ -2462,8 +2469,10 @@ The test result looks as follows,
     <Message>Issue: Add check Alter function to Tellurium</Message>
     <Message>Issue: Firefox plugin to automatically generate UI module for users</Message>
     <Message>Issue: Create a prototype for container-like Dojo widgets</Message>
-    <Message>Issue: Need to create Wiki page to explain how to setup Maven and use Maven to build multiple projects</Message>
-    <Message>Issue: Configure IntelliJ to properly load one maven sub-project and not look for an IntelliJ project dependency</Message>
+    <Message>Issue: Need to create Wiki page to explain how to setup Maven and 
+             use Maven to build multiple projects</Message>
+    <Message>Issue: Configure IntelliJ to properly load one maven sub-project and not
+             look for an IntelliJ project dependency</Message>
     <Message>Issue: Support nested properties for Tellurium</Message>
     <Message>Issue: update versions for extensioin dojo-widget and TrUMP projects</Message>
   </Test>
@@ -2481,12 +2490,16 @@ The test result looks as follows,
     <Runtime>4.023694</Runtime>
     <Message>Found 7  All Issues for owner matt.senter</Message>
     <Message>Issue: Add Maven 2 support</Message>
-    <Message>Issue: Add Maven support for the new code base with multiple sub-projects</Message>
+    <Message>Issue: Add Maven support for the new code base with multiple 
+             sub-projects</Message>
     <Message>Issue: Cannot find symbol class Selenium</Message>
-    <Message>Issue: Need to create Wiki page to explain how to setup Maven and use Maven to build multiple projects</Message>
+    <Message>Issue: Need to create Wiki page to explain how to setup Maven and 
+             use Maven to build multiple projects</Message>
     <Message>Issue: Need to add tar.gz file as artifact in Maven</Message>
-    <Message>Issue: Configure IntelliJ to properly load one maven sub-project and not look for an IntelliJ project dependency</Message>
-    <Message>Issue: update versions for extensioin dojo-widget and TrUMP projects</Message>
+    <Message>Issue: Configure IntelliJ to properly load one maven sub-project and 
+             not look for an IntelliJ project dependency</Message>
+    <Message>Issue: update versions for extensioin dojo-widget and TrUMP
+             projects</Message>
   </Test>
   <Test name='SearchIssueForOwner'>
     <Step>4</Step>
@@ -2520,8 +2533,10 @@ The test result looks as follows,
     <Status>PROCEEDED</Status>
     <Runtime>3.521415</Runtime>
     <Message>Found 5  All Issues for owner vivekmongolu</Message>
-    <Message>Issue: Create more examples to demonstrate the usage of different UI objects</Message>
-    <Message>Issue: DslScriptEngine causes NullPointerException when attempt to invoke server.runSeleniumServer() method</Message>
+    <Message>Issue: Create more examples to demonstrate the usage of different UI
+             objects</Message>
+    <Message>Issue: DslScriptEngine causes NullPointerException when attempt to 
+             invoke server.runSeleniumServer() method</Message>
     <Message>Issue: No such property: connector for class: DslTest</Message>
     <Message>Issue: Firefox plugin to automatically generate UI module for users</Message>
     <Message>Issue: Setup Firefox plugin sub-project</Message>
@@ -2540,9 +2555,12 @@ The test result looks as follows,
     <Runtime>3.475594</Runtime>
     <Message>Found 5  All Issues for owner haroonzone</Message>
     <Message>Issue: Solve HTTPS certificate problem</Message>
-    <Message>Issue: Refactor Tellurium project web site examples using TestNG and put them to the tellurium-testng-java sub-project</Message>
-    <Message>Issue: Create a new wiki page on how to create custom tellurium project for NetBeans</Message>
-    <Message>Issue: Create a new wiki page on how to create custom tellurium project for IntelliJ</Message>
+    <Message>Issue: Refactor Tellurium project web site examples using TestNG and 
+             put them to the tellurium-testng-java sub-project</Message>
+    <Message>Issue: Create a new wiki page on how to create custom tellurium project 
+             for NetBeans</Message>
+    <Message>Issue: Create a new wiki page on how to create custom tellurium project 
+             for IntelliJ</Message>
     <Message>Issue: Table operations for large size one seems to be very slow</Message>
   </Test>
 </TestResults>
@@ -2554,16 +2572,20 @@ In Tellurium, you can create test scripts in pure DSL. Take TelluriumPage.dsl as
 
 {{{
 //define Tellurium project menu
-ui.Container(uid: "menu", clocator: [tag: "table", id: "mt", trailer: "/tbody/tr/th"], group: "true"){
-    //since the actual text is  Project&nbsp;Home, we can use partial match here. Note "%%" stands for partial match
-    UrlLink(uid: "project_home", clocator: [text: "%%Home"])
+ui.Container(uid: "menu", clocator: [tag: "table", id: "mt", trailer: "/tbody/tr/th"],
+             group: "true")
+{
+    //since the actual text is  Project&nbsp;Home, we can use partial match here. 
+    //Note "*" stands for partial match
+    UrlLink(uid: "project_home", clocator: [text: "*Home"])
     UrlLink(uid: "downloads", clocator: [text: "Downloads"])
     UrlLink(uid: "wiki", clocator: [text: "Wiki"])
     UrlLink(uid: "issues", clocator: [text: "Issues"])
     UrlLink(uid: "source", clocator: [text: "Source"])
 }
 
-//define the Tellurium project search module, which includes an input box, two search buttons
+//define the Tellurium project search module, which includes an input box
+//and two search buttons
 ui.Form(uid: "search", clocator: [:], group: "true"){
     InputBox(uid: "searchbox", clocator: [name: "q"])
     SubmitButton(uid: "search_project_button", clocator: [value: "Search Projects"])
@@ -2616,8 +2638,10 @@ If you have any questions or problems with Tellurium, please join our [http://gr
 Tellurium Maven JUnit testing project could use the following POM file,
 
 {{{
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+         http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>Your_Group_ID</groupId>
     <artifactId>Your_Artifact_Id</artifactId>
@@ -2913,7 +2937,8 @@ Tellurium Maven JUnit testing project could use the following POM file,
                                     <pathelement location="target/test-classes"/>
                                 </path>
                                 <javac srcdir="src/test/groovy"
-                                       destdir="target/test-classes" classpathref="testcompile.classpath">
+                                       destdir="target/test-classes" 
+                                            classpathref="testcompile.classpath">
                                     <include name="**/*.java"/>
                                 </javac>
                             </tasks>
@@ -3031,7 +3056,8 @@ build.xml:
 	<target name="init">
 		<echo message="Initializing project..." />
 		<tstamp>
-			<format property="time.formatted" pattern="MM/dd/yyyy hh:mm:ss a" unit="hour" />
+			<format property="time.formatted" 
+                                pattern="MM/dd/yyyy hh:mm:ss a" unit="hour" />
 		</tstamp>
 		<mkdir dir="${dir.build}" />
 		<mkdir dir="${dir.build.tellurium}" />
@@ -3073,7 +3099,8 @@ build.xml:
             </sequential>
     </macrodef>
 
-   <taskdef name="groovyc" classname="org.codehaus.groovy.ant.Groovyc" classpathref="lib.path"/>
+   <taskdef name="groovyc" classname="org.codehaus.groovy.ant.Groovyc" 
+            classpathref="lib.path"/>
 
 	<target name="compile-tellurium" depends="init">
 		<echo message="Compiling java..." />
@@ -3102,7 +3129,8 @@ build.xml:
 
 	<target name="run-unit-tests" depends="compile-test">
 		<junit fork="yes" forkmode="once" maxmemory="1024m"
-			printsummary="yes" errorProperty="test.failed" failureProperty="test.failed">
+			printsummary="yes" errorProperty="test.failed" 
+                        failureProperty="test.failed">
 			<classpath refid="project.classpath" />
 			<formatter type="brief" usefile="false" />
 			<formatter type="xml" />
@@ -3135,11 +3163,12 @@ tellurium{
         port = "4444"
         //whether to use multiple windows
         useMultiWindows = false
-        //whether to run the embedded selenium server. If false, you need to manually set up a selenium server
+        //whether to run the embedded selenium server. 
+        //If false, you need to manually set up a selenium server
         runInternally = true
         //profile location
         profile = ""  
-        //user-extension.js file, for example, "target/test-classes/extension/user-extensions.js"
+        //user-extension.js file, for example, "target/user-extensions.js"
         userExtension = ""
     }
     //event handler
@@ -3154,7 +3183,8 @@ tellurium{
         //whether we should check if the UI element is presented
         checkElement = true
     }
-    //the configuration for the connector that connects the selenium client to the selenium server
+    //the configuration for the connector that connects the selenium client 
+    //to the selenium server
     connector{
         //selenium server host
         //please change the host if you run the Selenium server remotely
@@ -3185,12 +3215,13 @@ tellurium{
         //we may add the result report for regular tellurium test case
         result{
             //specify what result reporter used for the test result
-            //valid options include "SimpleResultReporter", "XMLResultReporter", and "StreamXMLResultReporter"
+            //valid options include "SimpleResultReporter", "XMLResultReporter",
+            //and "StreamXMLResultReporter"
             reporter = "XMLResultReporter"
             //the output of the result
             //valid options include "Console", "File" at this point
-            //if the option is "File", you need to specify the file name, other wise it will use the default
-            //file name "TestResults.output"
+            //if the option is "File", you need to specify the file name, 
+            //otherwise it will use the default file name "TestResults.output"
             output = "Console"
             //test result output file name
             filename = "TestResult.output"
@@ -3208,14 +3239,15 @@ tellurium{
     }
     uiobject{
         builder{
-            //user can specify custom UI objects here by define the builder for each UI object
+            //user can specify custom UI objects here by define the builder for 
+            //each UI object
             //the custom UI object builder must extend UiObjectBuilder class
             //and implement the following method:
             //
             // public build(Map map, Closure c)
             //
-            //For container type UI object, the builder is a bit more complicated, please
-            //take the TableBuilder or ListBuilder as an example
+            //For container type UI object, the builder is a bit more complicated, 
+            //please take the TableBuilder or ListBuilder as an example
 
             //example:
 //           Icon="org.tellurium.builder.IconBuilder"
