--- a/wiki/TelluriumUserGuide.wiki
+++ b/wiki/TelluriumUserGuide.wiki
@@ -2787,7 +2787,7 @@ to compile test code.
 
 Not really. If you write your test as pure DSL, you only need to know the DSL syntax. If you need to write your test in Java, you only need to define your UI modules in Groovy file by extending the DslContext class. Since Groovy accept all Java syntax, you can in fact write Java code in your Groovy file that defines the UI modules. For the actual TestCase or TestSuite, they are already Java code. As long as you know Java, you know how to write Tellurium tests.
 
-== What is the problem with Selenium XPath expressions and why there is need to create UI Module? ==
+== What is the problem with Selenium XPath expressions and why there is need to create UI Module ==
 
 That is a great question, The problem is not in XPath itself, but the way you use it. We have the following XPath locator:
  
@@ -2984,10 +2984,6 @@ List is similar to the Table, but it is one dimension. As a result, its UID uses
 
 the rule is {{{1) > 2)}}}.
 
-== Tellurium Future Directions ==
-
-Tellurium 0.6.0 added jQuery Selector support and a cache mechanism to increase the reuse of UI elements. From the next release, i.e., 0.7.0, we will work on our own Engine project to better support UI modules and achieve more robust performance and better speed. In the meanwhile, We will improve our Trump plugin to automatically generate DSL testing scripts for non-developers. 
-
 == How do I use a Firefox profile in Tellurium ==
 
 You can specify the profile in Tellurium Configuration file TelluriumConfig.groovy as follows,
@@ -3002,7 +2998,7 @@ You can specify the profile in Tellurium Configuration file TelluriumConfig.groo
    }
 }}}
 
-== How to overwrite Tellurium settings in my test class ==
+== How to Overwrite Tellurium Settings in My Test Class ==
 
 TelluriumConfig.groovy acts like a global setting file if you do not want to manually change it. Now, the  BaseTelluriumJavaTestCase provides two methods for you to overwrite the default settings,
 
@@ -3208,6 +3204,10 @@ We welcome contributions in many different ways, for example,
 Our project team is open for new members and is expecting new members. We need some new developers who are JavaScript and jQuery experts to join our development team. If you have free time and want to contribute to Tellurium, please contact Jian Fang or other existing Tellurium members.
 
 We also expect to have some Evangelism Team members, who could write blogs and articles about Tellurium, or present Tellurium to people, i.e., promote Tellurium in various ways. We welcome Evangelism Team members from different parts of the world and promote Tellurium in different Languages.  
+
+== Tellurium Future Directions ==
+
+Tellurium 0.6.0 added jQuery Selector support and a cache mechanism to increase the reuse of UI elements. From the next release, i.e., 0.7.0, we will work on our own Engine project to better support UI modules and achieve more robust performance and better speed. In the meanwhile, We will improve our Trump plugin to automatically generate DSL testing scripts for non-developers. 
 
 = Tellurium Support =
 
