--- a/wiki/TelluriumUserGuide.wiki
+++ b/wiki/TelluriumUserGuide.wiki
@@ -1154,7 +1154,7 @@ In addition to the above DSLs, Tellurium provides Selenium-compatible data acces
 
   * {{{String[] getAllWindowTitles()}}}: Returns the titles of all windows that the browser knows about.
 
-== Test Support DSL ==
+== Test Support DSLs ==
 
 Tellurium defined a set of DSLs to support Tellurium tests. The most often used ones include
 
@@ -2760,11 +2760,45 @@ That is to say, you should create the UI object and its builder and then in the 
 
 == How to build Tellurium from source ==
 
-Tellurium supports Maven and you can simply use the following command to build 
+If you want to build Tellurium from source, you can check out the trunk code using subversion command,
+
+{{{
+svn checkout http://aost.googlecode.com/svn/trunk/ tellurium
+}}}
+
+or using mvn command,
+
+{{{
+mvn scm:checkout -DconnectionUrl=scm:svn:http://aost.googlecode.com/svn/trunk -DcheckoutDirectory=tellurium
+}}}
+
+Be aware that the Maven command calls the subversion client to do the job and you must have the client installed in your system.
+
+If you want to build the whole project, just use
 
 {{{
 mvn clean install
 }}}
+
+and Maven will compile source code and resources, compile test code and test resources, run all tests, and then install all artifacts to your local repository under {{{YOUR_HOME/.m2/repository}}}.
+
+Sometimes, tests may break and if you still want to proceed, please use the ignore flag
+
+{{{
+mvn clean install -Dmaven.test.failure.ignore=true
+}}} 
+
+If you want to build an individual project, just go to that project directory and run the same command as above.
+
+If you like to run the tests, use command
+
+{{{
+mvn test
+}}}
+
+The sub-projects under the tools directory include Tellurium Maven archetypes and trump code, you may not really want to build them by yourself. For trump, the artifacts include a .xpi file.
+
+The assembly project just creates a set of tar files and you may not need to build it either. 
 
 Tellurium also provides ant build scripts. You may need to change some of the settings in the build.properties file so that it matches your environment. For example, the settings for javahome and javac.compiler. Then in the project root directory, run command: 
 
@@ -3847,6 +3881,84 @@ tellurium{
     }
 }
 }}}
+
+== Maven IDE Configuration ==
+
+=== Eclipse ===
+
+==== Install Maven Plug-in ====
+
+  # Click the Add Site button.
+  # Enter the following URL: http://m2eclipse.sonatype.org/update/
+  # Click OK.
+  # Expand the Maven Integration for Eclipse Update Site node.
+  # Select the Maven Integration check box.
+  # Click the Install button and follow the wizard.
+  # Restart Eclipse. 
+
+==== Configure Maven Plug-in ====
+
+  # Click Window | Preferences.
+  # Expand the Maven node.
+  # Select the Installations node.
+  # Click the Add button.
+  # Navigate the the Maven 2.0.9 installation folder.
+  # Click OK.
+  # Click the check box next to the new Maven installation.
+ 
+==== Import Projects ====
+
+  # Click File | Import.
+  # Type Maven in the filter text field.
+  # Under the General node, select the Maven Projects node.
+  # Click Next.
+  # Click the Browse button and navigate to the ide-settings folder.
+  # Click OK.
+  # Click Finish.
+
+=== Netbeans ===
+
+==== Install Maven Plugin ====
+
+Netbeans does not come with automatic support for Maven, you will need to install the plugin.
+
+  # From the menu select Tools/Plugins
+  # In the plugins screen, click on the Installed tab and Click on the Reload Catalog tab to get the list of available plugins. 
+  # Select the Available Plugins tab and scroll down until you see the Maven plugin in.
+  # Click on the check box next to this plug in and then select Install.
+  # Follow the instructions to install the plug in. 
+
+==== Configure Maven Plugin ====
+ 
+  # Bring up the preferences dialog.
+  # Select Miscellaneous and then click on the Maven tab.
+  # Tools=>Options for Windows users.
+  # Click on the Browse button next to the entry for External Maven Home. Navigate to the directory where you installed Maven and click Open.
+  # Update the frequency with which your local repository is indexed
+
+==== Import Projects ====
+
+  # Click File | Open Project
+  # Navigate to the ide-settings folder. 
+  # Choose the pom.xml file and click open.
+  
+=== IntelliJ ===
+  
+IntelliJ IDEA has Maven Plugin installed by default.
+
+==== Configure Maven Plug-in ====
+ 
+  # Click File | Settings to bring up the IDE settings window.
+  # Click the Maven node.
+  # Click the Override check box next to the Maven Home Directory text field.
+  # Click the ... button.
+  # Navigate to the Maven 2.0.9 installation directory.
+  # Click OK.
+
+==== Import Projects ====
+
+  # Click File | Open Project
+  # Choose the pom.xml file and click OK.
 
 = Resources =
 
